--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
     <Header class="header">
         <div class="header-container container">
 
-            <a class="header-logo link" href="./index.html" lang="en"> <span class="header-logo-web">Web</span><span class="header-logo-studio">Studio</span></a>
+            <a class="header-logo link" href="./index.html" lang="en"> <span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
             <ul class="header-list list">
                 <li class="header-item "><a class="header-link link current" href="index.html">Студия</a></li>
                 <li class="header-item"><a class="header-link link" href="./portfolio.html">Портфолио</a></li>
@@ -300,8 +301,8 @@
     </section>
     <footer class="footer">
         <div class="container footer-container">
-            <div class="footer-left">
-        <a class="footer-logo link" href="./index.html" lang="en"> <span class="footer-logo-web">Web</span><span class="footer-logo-studio">Studio</span></a>
+            <div class="footer-contact-block">
+        <a class="footer-logo link" href="./index.html" lang="en"> <span class="logo-web">Web</span><span class="footer-logo-studio">Studio</span></a>
         <address class="footer-address">
             <ul class="footer-list list">
                 <li class="footer-item"><a class="footer-contact-address link" href="https://goo.gl/maps/iwNFUYwJT8Z2ihL4A" target="_blank"
@@ -312,7 +313,7 @@
             </ul>
         </address>
         </div>
-        <div class="footer-right">
+        <div class="footer-social-block">
         <h3 class="footer-social-join">присоединяйтесь</h3>
         <ul class="footer-social-icon list">
             <li class="footer-social-icon-list">
