--- a/portfolio.html
+++ b/portfolio.html
@@ -12,207 +12,208 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
             integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
     <Header class="header">
-        <div class="header-container container">
-    
-            <a class="header-logo link" href="./index.html" lang="en"> <span class="logo-web">Web</span><span
+        <div class="header__container container">
+            <a class="header__logo link" href="./index.html" lang="en"> <span class="logo-web">Web</span><span
                     class="logo-studio">Studio</span></a>
             <ul class="header-list list">
-                <li class="header-item"><a class="header-link link" href="index.html">Студия</a></li>
-                <li class="header-item"><a class="header-link link current" href="./portfolio.html">Портфолио</a></li>
-                <li class="header-item"><a class="header-link link" href="#">Контакты</a></li>
+                <li class="header-list__item"><a class="header-list__link link" href="index.html">Студия</a></li>
+                <li class="header-list__item"><a class="header-list__link link current" href="./portfolio.html">Портфолио</a></li>
+                <li class="header-list__item"><a class="header-list__link link" href="#">Контакты</a></li>
             </ul>
             <ul class="header-list-contact list">
-                <li class="header-item">
-                    <a class="header-contact link" href="mailto:info@devstudio.com">
-                        <svg class="mail-icon" width="16" height="12">
+                <li class="header-list-contact__item">
+                    <a class="header-list-contact__link link" href="mailto:info@devstudio.com">
+                        <svg class="header-list-contact__icon" width="16" height="12">
                             <use href="./images/icons.svg#icon-envelope"> </use>
                         </svg>info@devstudio.com</a>
                 </li>
-                <li class="header-item"><a class="header-contact link" href="tel:+380961111111"><svg class="mail-icon"
-                            width="10" height="16">
+                <li class="header-list-contact__item">
+                    <a class="header-list-contact__link link link" href="tel:+380961111111">
+                        <svg class="header-list-contact__icon" width="10" height="16">
                             <use href="./images/icons.svg#icon-smartphone"> </use>
-                        </svg>+38 096 111 11 11</a></li>
+                        </svg>+38 096 111 11 11</a>
+                </li>
             </ul>
         </div>
     </Header>
     <section class="work">
         <div class="container">
-        <ul class="work-list list">
-            <li class="work-item"><button class="work-button" type="button">Все</button></li>
-            <li class="work-item"><button class="work-button" type="button">Веб-сайты</button></li>
-            <li class="work-item"><button class="work-button" type="button">Приложения</button></li>
-            <li class="work-item"><button class="work-button" type="button">Дизайн</button></li>
-            <li class="work-item"><button class="work-button" type="button">Маркетинг</button></li>
+        <ul class="work__list list">
+            <li class="work__item"><button class="work__button" type="button">Все</button></li>
+            <li class="work__item"><button class="work__button" type="button">Веб-сайты</button></li>
+            <li class="work__item"><button class="work__button" type="button">Приложения</button></li>
+            <li class="work__item"><button class="work__button" type="button">Дизайн</button></li>
+            <li class="work__item"><button class="work__button" type="button">Маркетинг</button></li>
         </ul>
-        <ul class="portfolio-list list">
-            <li class="portfolio-item">
-                <div class="portfolio-wrap">
+        <ul class="portfolio__list list">
+            <li class="portfolio__item">
+                <div class="portfolio__wrap">
                 <img src="./images/project1.jpg" alt="Веб-сайт" 
                 width="370"
                 height="294">
-                <p class="portfolio-text-hiden">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                <p class="portfolio__text-hiden">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                     платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
                     </div>
-                <h3 class="portfolio-title">Технокряк</h3>
-                <p class="portfolio-text">Веб-сайт</p>
+                <h3 class="portfolio__title">Технокряк</h3>
+                <p class="portfolio__text">Веб-сайт</p>
                 
             </li>
-            <li class="portfolio-item">
-                <div class="portfolio-wrap">
+            <li class="portfolio__item">
+                <div class="portfolio__wrap">
                     <img src="./images/project2.jpg" alt="Веб-сайт" width="370" height="294">
-                    <p class="portfolio-text-hiden">Технокряк это современная площадка распространения коронавируса. Компании используют
+                    <p class="portfolio__text-hiden">Технокряк это современная площадка распространения коронавируса. Компании используют
                         эту
                         платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
-                <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
-                <p class="portfolio-text">Дизайн</p>
+                <h3 class="portfolio__title">Постер New Orlean vs Golden Star</h3>
+                <p class="portfolio__text">Дизайн</p>
             </li>
-            <li class="portfolio-item">
-                <div class="portfolio-wrap">
+            <li class="portfolio__item">
+                <div class="portfolio__wrap">
                     <img src="./images/project3.jpg" alt="Веб-сайт" width="370" height="294">
-                    <p class="portfolio-text-hiden">Технокряк это современная площадка распространения коронавируса. Компании используют
+                    <p class="portfolio__text-hiden">Технокряк это современная площадка распространения коронавируса. Компании используют
                         эту
                         платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
-                <h3 class="portfolio-title">Ресторан Seafood</h3>
-                <p class="portfolio-text">Приложение</p>
+                <h3 class="portfolio__title">Ресторан Seafood</h3>
+                <p class="portfolio__text">Приложение</p>
             </li>
-            <li class="portfolio-item">
-                <div class="portfolio-wrap">
+            <li class="portfolio__item">
+                <div class="portfolio__wrap">
                     <img src="./images/project4.jpg" alt="Веб-сайт" width="370" height="294">
-                    <p class="portfolio-text-hiden">Технокряк это современная площадка распространения коронавируса. Компании используют
+                    <p class="portfolio__text-hiden">Технокряк это современная площадка распространения коронавируса. Компании используют
                         эту
                         платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
-                <h3 class="portfolio-title">Проект Prime</h3>
-                <p class="portfolio-text">Маркетинг</p>
+                <h3 class="portfolio__title">Проект Prime</h3>
+                <p class="portfolio__text">Маркетинг</p>
             </li>
-            <li class="portfolio-item">
-            <div class="portfolio-wrap">
+            <li class="portfolio__item">
+            <div class="portfolio__wrap">
                 <img src="./images/project5.jpg" alt="Веб-сайт" width="370" height="294">
-                <p class="portfolio-text-hiden">Технокряк это современная площадка распространения коронавируса. Компании используют
+                <p class="portfolio__text-hiden">Технокряк это современная площадка распространения коронавируса. Компании используют
                     эту
                     платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
             </div>
-                <h3 class="portfolio-title">Проект Boxes</h3>
-                <p class="portfolio-text">Приложение</p>
+                <h3 class="portfolio__title">Проект Boxes</h3>
+                <p class="portfolio__text">Приложение</p>
             </li>
-            <li class="portfolio-item">
-                <div class="portfolio-wrap">
+            <li class="portfolio__item">
+                <div class="portfolio__wrap">
                     <img src="./images/project6.jpg" alt="Веб-сайт" width="370" height="294">
-                    <p class="portfolio-text-hiden">Технокряк это современная площадка распространения коронавируса. Компании используют
+                    <p class="portfolio__text-hiden">Технокряк это современная площадка распространения коронавируса. Компании используют
                         эту
                         платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
-                <h3 class="portfolio-title">Inspiration has no Borders</h3>
-                <p class="portfolio-text">Веб-сайт</p>
+                <h3 class="portfolio__title">Inspiration has no Borders</h3>
+                <p class="portfolio__text">Веб-сайт</p>
             </li>
-            <li class="portfolio-item">
-                <div class="portfolio-wrap">
+            <li class="portfolio__item">
+                <div class="portfolio__wrap">
                     <img src="./images/project7.jpg" alt="Веб-сайт" width="370" height="294">
-                    <p class="portfolio-text-hiden">Технокряк это современная площадка распространения коронавируса. Компании используют
+                    <p class="portfolio__text-hiden">Технокряк это современная площадка распространения коронавируса. Компании используют
                         эту
                         платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
-                <h3 class="portfolio-title">Издание Limited Edition</h3>
-                <p class="portfolio-text">Дизайн</p>
+                <h3 class="portfolio__title">Издание Limited Edition</h3>
+                <p class="portfolio__text">Дизайн</p>
             </li>
-            <li class="portfolio-item">
-                <div class="portfolio-wrap">
+            <li class="portfolio__item">
+                <div class="portfolio__wrap">
                     <img src="./images/project8.jpg" alt="Веб-сайт" width="370" height="294">
-                    <p class="portfolio-text-hiden">Технокряк это современная площадка распространения коронавируса. Компании используют
+                    <p class="portfolio__text-hiden">Технокряк это современная площадка распространения коронавируса. Компании используют
                         эту
                         платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
-                <h3 class="portfolio-title">Проект LAB</h3>
-                <p class="portfolio-text">Маркетинг</p>
+                <h3 class="portfolio__title">Проект LAB</h3>
+                <p class="portfolio__text">Маркетинг</p>
             </li>
-            <li class="portfolio-item">
-                <div class="portfolio-wrap">
+            <li class="portfolio__item">
+                <div class="portfolio__wrap">
                     <img src="./images/project9.jpg" alt="Веб-сайт" width="370" height="294">
-                    <p class="portfolio-text-hiden">Технокряк это современная площадка распространения коронавируса. Компании используют
+                    <p class="portfolio__text-hiden">Технокряк это современная площадка распространения коронавируса. Компании используют
                         эту
                         платформу для цифрового
                         шпионажа и атак на защищённые сервера конкурентов.</p>
                 </div>
-                <h3 class="portfolio-title">Growing Business</h3>
-                <p class="portfolio-text">Приложение</p>
+                <h3 class="portfolio__title">Growing Business</h3>
+                <p class="portfolio__text">Приложение</p>
             </li>
         </ul>
         </div>
     </section>
-    <footer class="footer">
-        <div class="container footer-container">
-            <div class="footer-contact-block">
-                <a class="footer-logo link" href="./index.html" lang="en"> <span class="logo-web">Web</span><span
-                        class="footer-logo-studio">Studio</span></a>
-                <address class="footer-address">
-                    <ul class="footer-list list">
-                        <li class="footer-item"><a class="footer-contact-address link"
-                                href="https://goo.gl/maps/iwNFUYwJT8Z2ihL4A" target="_blank"
-                                rel="noopener noreferrer nofollow">г. Киев, пр-т Леси Украинки, 26</a>
-                        <li class="footer-item"><a class="footer-contact link"
-                                href="mailto:info@devstudio.com">info@example.com</a>
-                        </li>
-                        <li class="footer-item"><a class="footer-contact link" href="tel:+380991111111">+38 099 111 11
-                                11</a></li>
-                    </ul>
-                </address>
-            </div>
-            <div class="footer-social-block">
-                <h3 class="footer-social-join">присоединяйтесь</h3>
-                <ul class="footer-social-icon list">
-                    <li class="footer-social-icon-list">
-                        <a href="" class="footer-social-icon-link">
-                            <svg class="footer-social-icon-item" width="20" height="20">
-                                <use href="./images/icons.svg#icon-instagram"> </use>
-                            </svg>
-                        </a>
+<footer class="footer">
+    <div class="container footer__container">
+        <div class="footer__contact-block">
+            <a class="footer__logo link" href="./index.html" lang="en"> <span class="logo-web">Web</span><span
+                    class="footer__logo-studio">Studio</span></a>
+            <address class="footer__address">
+                <ul class="footer__list list">
+                    <li class="footer__item"><a class="footer__contact-address link"
+                            href="https://goo.gl/maps/iwNFUYwJT8Z2ihL4A" target="_blank"
+                            rel="noopener noreferrer nofollow">г. Киев, пр-т Леси Украинки, 26</a>
+                    <li class="footer__item"><a class="footer__contact link"
+                            href="mailto:info@devstudio.com">info@example.com</a>
                     </li>
-                    <li class="footer-social-icon-list">
-                        <a href="" class="footer-social-icon-link">
-                            <svg class="footer-social-icon-item" width="20" height="20">
-                                <use href="./images/icons.svg#icon-twitter"> </use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-social-icon-list">
-                        <a href="" class="footer-social-icon-link">
-                            <svg class="footer-social-icon-item" width="20" height="20">
-                                <use href="./images/icons.svg#icon-facebook"> </use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="footer-social-icon-link">
-                            <svg class="footer-social-icon-item" width="20" height="20">
-                                <use href="./images/icons.svg#icon-linkedin"> </use>
-                            </svg>
-                        </a>
-                    </li>
+                    <li class="footer__item"><a class="footer__contact link" href="tel:+380991111111">+38 099 111 11
+                            11</a></li>
                 </ul>
-            </div>
+            </address>
+        </div>
+        <div class="footer__social-block">
+            <h3 class="footer__social-join">присоединяйтесь</h3>
+            <ul class="footer__social-icon list">
+                <li class="footer__social-icon-list">
+                    <a href="" class="footer__social-icon-link">
+                        <svg class="footer__social-icon-item" width="20" height="20">
+                            <use href="./images/icons.svg#icon-instagram"> </use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer__social-icon-list">
+                    <a href="" class="footer__social-icon-link">
+                        <svg class="footer__social-icon-item" width="20" height="20">
+                            <use href="./images/icons.svg#icon-twitter"> </use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer__social-icon-list">
+                    <a href="" class="footer__social-icon-link">
+                        <svg class="footer__social-icon-item" width="20" height="20">
+                            <use href="./images/icons.svg#icon-facebook"> </use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="footer__social-icon-link">
+                        <svg class="footer__social-icon-item" width="20" height="20">
+                            <use href="./images/icons.svg#icon-linkedin"> </use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
         <form class="subscribe" action="#">
-            <label class="email-label">Подпишитесь на рассылку</label> <br>
-            <input type="email" class="subscribe-input" name="email" placeholder="E-mail">
-            <button type="submit" class="subscribe-btn">Подписаться <svg class="subscribe-item" width="24" height="24">
+            <label class="subscribe__email-label">Подпишитесь на рассылку</label> <br>
+            <input type="email" class="subscribe__input" name="email" placeholder="E-mail">
+            <button type="submit" class="subscribe__btn">Подписаться <svg class="subscribe-item" width="24" height="24">
                     <use href="./images/icons.svg#icon-icon-send"> </use>
                 </svg></button>
         </form>
-        </div>
-    </footer>
+    </div>
+
+</footer>
 </body>
 </html>
